--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <style>
       body: {
         color: #001645;
+        font-family: 'Montserrat', sans-serif;
       }
     </style>
   </head>
