--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
       body {
         color: #001645;
         font-family: 'Montserrat', sans-serif;
+        text-align: center;
       }
     </style>
   </head>
   <body>
     <h1>Mistrovství české republiky v discgolfu 2023</h1>
     <h2>Běchovice, 15-17.9.2023</h2>
+    
+    <h3>Discgolf club Praha & Česká asociace discgolfu</h3>
+      
+    </div>
   </body>
 </html>
