--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Mistrovství České Republiky v discgolfu 2023 - Běchovice </title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <style>
       body {
@@ -10,7 +11,7 @@
     </style>
   </head>
   <body>
-    <h1>Mistrovství české republiky v discgolfu 2023</h1>
+    <h1>Mistrovství České Republiky v discgolfu 2023</h1>
     <h2>Běchovice, 15-17.9.2023</h2>
     
     <h3>Discgolf club Praha & Česká asociace discgolfu</h3>
