--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         color: #001645;
         font-family: 'Montserrat', sans-serif;
         text-align: center;
+      };
+      a {
+        color: #001645;
       }
     </style>
   </head>
@@ -14,7 +17,7 @@
     <h1>Mistrovství České Republiky v discgolfu 2023</h1>
     <h2>Běchovice, 15-17.9.2023</h2>
     
-    <h3>Discgolf club Praha & Česká asociace discgolfu</h3>
+    <p>Pořádá <a href="https://www.dgcp.cz">Discgolf club Praha</a> pod záštitou <a href="https://www.cadg.cz">České asociace discgolfu</a></h3>
       
     </div>
   </body>
