update contacts, logo, logo size

--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
           </ul>
         </div>
         <div class="col-md-4 col-sm-6 feature">
+          <img src="img/cald_logo.png" class="speaker-img">
+          <h3>Česká asociace létajícího disku</h3>
+          <p></p>
+          <ul class="speaker-social">
+            <li><a href="https://www.cald.cz" target="_blank"><span class="ti-link"></span></a></li>
+          </ul>
+        </div>
+        <div class="col-md-4 col-sm-6 feature">
           <img src="img/bechovice_logo.png" class="speaker-img">
           <h3>Městská část Praha-Běchovice</h3>
           <p></p>
@@ -136,7 +144,7 @@
           <h2 class="row-title">Informace pro partnery</h2>
           <div class="col">
             <p>Chcete se stát součástí nejdůležitějšího turnaje sezony?</p>
-            <a href="#" target="_blank" class="btn btn-lg btn-red"><span class="ti-file"></span> Prezentace pro partnery</a>
+            <a href="static/MCR-2023-Prezentace-pro-partnery.pdf" target="_blank" class="btn btn-lg btn-red"><span class="ti-file"></span> Prezentace pro partnery</a>
           </div>
         </div>
       </div>
@@ -201,51 +209,25 @@
 
       <!-- Start: Kontakt -->
       <div class="container">
-        <div class="row me-row content-ct">
+        <div class="row me-row content-ct speaker" id="partneri">
           <h2 class="row-title">Kontakt</h2>
-          <div class="col feature">
-            <span class="ti-world"></span>
-            <h3>info@dgcp.cz</h3>
+          <div class="col col-md-4 col-sm-6 feature">
+            <img src="img/foto_td.png" class="speaker-img">
+            <h3>Jakub Koštel</h3>
+            <h4>Ředitel turnaje</h4>
+            <p><a href="#" target="_blank">kostel.jakub@gmail.com</a></p>
+            <p>+420 776 819 208</p>
+          </div>
+          <div class="col col-md-4 col-sm-6 feature">
+            <img src="img/dgcp_logo.png" class="speaker-img">
+            <h3>Discgolf club Praha</h3>
+            <h4>Pořádající klub</h4>
+            <p><a href="#" target="_blank">info@dgcp.cz</a></p>
+            <p><a href="https://www.dgcp.cz" target="_blank">www.dgcp.cz</a></p>
           </div>
         </div>
       </div>
       <!-- End: Kontakt -->
-
-      <!-- Start: Organizacni tym -->
-      <!-- <div class="row me-row content-ct speaker" id="tym">
-        <h2 class="row-title">Organizační tým</h2>
-        <div class="col-md-4 col-sm-6 feature">
-          <img src="img/speaker-1.png" class="speaker-img">
-          <h3>Simon Collins</h3>
-          <p>Simon is designer and partner at Fictivekin and has worked in a variety of situations for bands, record labels, governments, polar explorers, and most other things...</p>
-          <ul class="speaker-social">
-            <li><a href="#"><span class="ti-facebook"></span></a></li>
-            <li><a href="#"><span class="ti-twitter-alt"></span></a></li>
-            <li><a href="#"><span class="ti-linkedin"></span></a></li>
-          </ul>
-        </div>
-        <div class="col-md-4 col-sm-6 feature">
-          <img src="img/speaker-2.png" class="speaker-img">
-          <h3>Stephanie Troeth</h3>
-          <p>Stephie is a user experience researcher and designer. In over 15 years of working on the web, she has worn many hats, including a product lead for a tech startup in publishing...</p>
-          <ul class="speaker-social">
-            <li><a href="#"><span class="ti-facebook"></span></a></li>
-            <li><a href="#"><span class="ti-twitter-alt"></span></a></li>
-            <li><a href="#"><span class="ti-linkedin"></span></a></li>
-          </ul>
-        </div>
-        <div class="col-md-4 col-sm-6 feature">
-          <img src="img/speaker-3.png" class="speaker-img">
-          <h3>Harry Roberts</h3>
-          <p>Harry is a freelance designer, developer, writer, speaker and front-end architect from the UK, previously working as Senior UI Developer for Sky. He Tweets at...</p>
-          <ul class="speaker-social">
-            <li><a href="#"><span class="ti-facebook"></span></a></li>
-            <li><a href="#"><span class="ti-twitter-alt"></span></a></li>
-            <li><a href="#"><span class="ti-linkedin"></span></a></li>
-          </ul>
-        </div>
-      </div> -->
-      <!-- End: Organizacni tym -->
 
       <!-- Start: Footer -->
       <div class="container-fluid footer">
