fix partner section overflow

--- a/index.html
+++ b/index.html
@@ -93,47 +93,49 @@
       <!-- End: Zakladni informace -->
 
       <!-- Start: Partneri -->
-      <div class="row me-row content-ct speaker" id="partneri">
-        <h2 class="row-title">Partneři turnaje</h2>
-        <div class="col-md-4 col-sm-6 feature">
-          <img src="img/ultimo_logo.png" class="speaker-img">
-          <h3>Ultimo.cz</h3>
-          <p></p>
-          <ul class="speaker-social">
-            <li><a href="https://www.ultimo.cz" target="_blank"><span class="ti-link"></span></a></li>
-          </ul>
-        </div>
-        <div class="col-md-4 col-sm-6 feature">
-          <img src="img/dgcp_logo.png" class="speaker-img">
-          <h3>Discgolf club Praha</h3>
-          <p></p>
-          <ul class="speaker-social">
-            <li><a href="https://www.dgcp.cz" target="_blank"><span class="ti-link"></span></a></li>
-          </ul>
-        </div>
-        <div class="col-md-4 col-sm-6 feature">
-          <img src="img/cadg_logo.png" class="speaker-img">
-          <h3>Česká asociace discgolfu</h3>
-          <p></p>
-          <ul class="speaker-social">
-            <li><a href="https://www.cadg.cz" target="_blank"><span class="ti-link"></span></a></li>
-          </ul>
-        </div>
-        <div class="col-md-4 col-sm-6 feature">
-          <img src="img/cald_logo.png" class="speaker-img">
-          <h3>Česká asociace létajícího disku</h3>
-          <p></p>
-          <ul class="speaker-social">
-            <li><a href="https://www.cald.cz" target="_blank"><span class="ti-link"></span></a></li>
-          </ul>
-        </div>
-        <div class="col-md-4 col-sm-6 feature">
-          <img src="img/bechovice_logo.png" class="speaker-img">
-          <h3>Městská část Praha-Běchovice</h3>
-          <p></p>
-          <ul class="speaker-social">
-            <li><a href="https://www.praha-bechovice.cz" target="_blank"><span class="ti-link"></span></a></li>
-          </ul>
+      <div class="container">
+        <div class="row me-row content-ct speaker" id="partneri">
+          <h2 class="row-title">Partneři turnaje</h2>
+          <div class="col-md-4 col-sm-6 feature">
+            <img src="img/ultimo_logo.png" class="speaker-img">
+            <h3>Ultimo.cz</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.ultimo.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
+            <img src="img/dgcp_logo.png" class="speaker-img">
+            <h3>Discgolf club Praha</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.dgcp.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
+            <img src="img/cadg_logo.png" class="speaker-img">
+            <h3>Česká asociace discgolfu</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.cadg.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
+            <img src="img/cald_logo.png" class="speaker-img">
+            <h3>Česká asociace létajícího disku</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.cald.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
+            <img src="img/bechovice_logo.png" class="speaker-img">
+            <h3>Městská část Praha-Běchovice</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.praha-bechovice.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
         </div>
       </div>
       <!-- End: Partneri -->
