--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
               <li><a href="https://www.praha-bechovice.cz" target="_blank"><span class="ti-link"></span></a></li>
             </ul>
           </div>
+          <!-- <div class="col-md-4 col-sm-6 feature">
+            <img src="img/tectra_logo.png" class="speaker-img">
+            <h3>Tectra</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.tectra.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div> -->
         </div>
       </div>
       <!-- End: Partneri -->
@@ -221,9 +229,15 @@
             <p>+420 776 819 208</p>
           </div>
           <div class="col col-md-4 col-sm-6 feature">
+            <img src="img/cald_logo.png" class="speaker-img">
+            <h3>Česká asociace létajícího disku</h3>
+            <h4>Pořadatel</h4>
+            <p><a href="https://www.cald.cz" target="_blank">www.cald.cz</a></p>
+          </div>
+          <div class="col col-md-4 col-sm-6 feature">
             <img src="img/dgcp_logo.png" class="speaker-img">
             <h3>Discgolf club Praha</h3>
-            <h4>Pořádající klub</h4>
+            <h4>Hostující klub</h4>
             <p><a href="#" target="_blank">info@dgcp.cz</a></p>
             <p><a href="https://www.dgcp.cz" target="_blank">www.dgcp.cz</a></p>
           </div>
