--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       <div class="container-fluid footer">
         <div class="row footer-credit">
           <div class="col-md-6 col-sm-6">
-            <p>&copy; 2023, <a href="http://www.dgcp.cz">Discgolf club Praha (DGC Praha), z. s.</p>
+            <p>&copy; 2023, <a href="http://www.cald.cz">Česká asociace létajícího disku, z.s.</p>
           </div>
         </div>
       </div>
