Add HMP and MVP to partners

--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
+            <img src="img/mvp_logo.png" class="speaker-img">
+            <h3>MVP Disc Sports</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.mvpdiscsports.com" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
             <img src="img/dgcp_logo.png" class="speaker-img">
             <h3>Discgolf club Praha</h3>
             <p></p>
@@ -127,6 +135,11 @@
             <ul class="speaker-social">
               <li><a href="https://www.cald.cz" target="_blank"><span class="ti-link"></span></a></li>
             </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
+            <img src="img/praha_logo.png" class="speaker-img">
+            <h3>Hlavní město Praha</h3>
+            <p></p>
           </div>
           <div class="col-md-4 col-sm-6 feature">
             <img src="img/bechovice_logo.png" class="speaker-img">
