Add HMP and MVP to partners

--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
             <img src="img/praha_logo.png" class="speaker-img">
             <h3>Hlavní město Praha</h3>
             <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.praha.eu" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
             <img src="img/bechovice_logo.png" class="speaker-img">
