--- a/index.html
+++ b/index.html
@@ -113,6 +113,15 @@
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
+            <img src="img/kostka_logo.png" class="speaker-img">
+            <h3Kostka stav</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.kostkastav.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div cla
+          <div class="col-md-4 col-sm-6 feature">
             <img src="img/dgcp_logo.png" class="speaker-img">
             <h3>Discgolf club Praha</h3>
             <p></p>
