--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </div>
           <div class="col-md-4 col-sm-6 feature">
             <img src="img/kostka_logo.png" class="speaker-img">
-            <h3Kostka stav</h3>
+            <h3>Kostka stav</h3>
             <p></p>
             <ul class="speaker-social">
               <li><a href="https://www.kostkastav.cz" target="_blank"><span class="ti-link"></span></a></li>
