--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <span class="ti-world"></span>
             <h3>O turnaji</h3>
             <p>Mistrovství České Republiky v kategoriích MPO (muži), FPO (ženy) a MJ18 (junioři do 18 let)</p>
-            <p>PDGA A Tier</p>
+            <p>PDGA B Tier</p>
           </div>
           <div class="col-md-4 feature">
             <span class="ti-map-alt"></span>
