Add BigHub to partners

--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
+            <img src="img/bighub_logo.png" class="speaker-img">
+            <h3>BigHub</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.bighub.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
             <img src="img/dgcp_logo.png" class="speaker-img">
             <h3>Discgolf club Praha</h3>
             <p></p>
