Update idiscgolf page

--- a/idiscgolf.html
+++ b/idiscgolf.html
@@ -114,10 +114,9 @@
 </div>
 
 <div class="cont-content container">
-    <p>
-        Turnaj se odehraje na nově rozšířeném hřišti v Běchovicích, které bude pro potřeby turnaje náležitě upraveno, aby prověřilo všechny aspekty hry.
-        Pro kategorii FPO bude připraven mírně zkrácený layout.
-    </p>
+    <a href="https://mcr.dgcp.cz/img/mcr2023_layout.pdf" target="_blank">
+        <img src="https://mcr.dgcp.cz/img/mcr2023_layout.png" class="w-100">
+    </a>
 </div>
 
 <div class="cont-heading container">
