Move idiscgolf to repo

--- a/idiscgolf.html
+++ b/idiscgolf.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 <style>
     .h-mcr {
         box-sizing: border-box; 
@@ -56,6 +58,10 @@
         letter-spacing: 0.8px;
     }
 
+    .partner-img-lg {
+        max-width: 80%;
+    }
+
     .partner-img {
         max-width: 60%;
     }
@@ -105,6 +111,9 @@
             <p>MJ18</p>
         </div>
 	</div>
+    <p>
+        Startovné je nutné uhradit do 7 dní od registrace, jinak bude registrace zrušena.
+    </p>
 </div>
 
 <div class="cont-heading container">
@@ -119,6 +128,12 @@
     </a>
 </div>
 
+<div class="cont-content container">
+    <p>
+        Detailní caddy book bude zveřejněn 2 týdny před turnajem.
+    </p>
+</div>
+
 <div class="cont-heading container">
     <h2 class="h-mcr">
         Informace
@@ -126,9 +141,37 @@
 </div>
 
 <div class="cont-content container">
-    <p>
-        Přesný harmonogram a možnosti stravování a ubytování budou upřesněny v dostatečném předstihu.
-    </p>
+    <h4>Předběžný harmonogram</h4>
+    <table class="table">
+        <tbody>
+        <tr><th colspan="2">čtvrtek 14.9.</th></tr>
+        <tr><td>8:00-20:00</td><td>Hřiště připraveno k tréninku</td></tr>
+        <tr><td></td><td></td></tr>
+        
+        <tr><th colspan="2">pátek 15.9.</th></tr>
+        <tr><td>8:00 - 9:00</td><td>Výhoz kategorie FPO</td></tr>
+        <tr><td>9:00 - 13:30</td><td>Výhoz kategorie MPO</td></tr>
+        <tr><td>13:30 - 14:30</td><td>Výhoz kategorie MJ18</td></tr>
+        <tr><td></td><td></td></tr>
+
+        <tr><th colspan="2">sobota 16.9.</th></tr>
+        <tr><td>8:00 - 12:30</td><td>Výhoz kategorie MPO</td></tr>
+        <tr><td>12:30</td><td>Výhoz vedoucí skupiny MPO</td></tr>
+        <tr><td>12:30 - 13:30</td><td>Výhoz kategorie MJ18</td></tr>
+        <tr><td>13:30</td><td>Výhoz vedoucí skupiny MJ18</td></tr>
+        <tr><td>13:30 - 14:30</td><td>Výhoz kategorie FPO</td></tr>
+        <tr><td>14:30</td><td>Výhoz vedoucí skupiny FPO</td></tr>
+        <tr><td></td><td></td></tr>
+        
+        <tr><th colspan="2">neděle 17.9.</th></tr>
+        <tr><td>8:00 - 9:00</td><td>Výhoz kategorie MJ18</td></tr>
+        <tr><td>9:00</td><td>Výhoz vedoucí skupiny MJ18</td></tr>
+        <tr><td>9:00 - 10:00</td><td>Výhoz kategorie FPO</td></tr>
+        <tr><td>10:00</td><td>Výhoz vedoucí skupiny FPO</td></tr>
+        <tr><td>10:00 - 14:30</td><td>Výhoz kategorie MPO</td></tr>
+        <tr><td>14:30</td><td>Výhoz vedoucí skupiny MPO</td></tr>
+        </tbody>
+    </table>
 
     <h4>Dopravní obslužnost</h4>
     <p>
@@ -137,6 +180,65 @@
     <p>
         Pro parkování je možné využít několik parkovišť v okolí s dostatečnou kapacitou.
     </p>
+
+    <h4>Možnosti ubytování</h4>
+    <p>
+        V okolí je možné využít některé z uvedených ubytovacích zařízení. 
+        Pro zájemce je také možnost postavit si stany v blízkosti jamky číslo 2. Bude zde k dispozici mobilní WC, sprcha bohužel ne.
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Název</th>
+                <th>Přibližná cena</th>
+                <th>Doprava</th>
+                <th>Možnost snídaně</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><a href="https://pglreal.cz/pension.CZ.html">Milk Inn</a></td>
+                <td>650,- za osobu a noc</td>
+                <td>cca 10 minut autobusem přímo na hřiště</td>
+                <td>Ano</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.penzion-veronika.cz/">Penzion Veronika</a></td>
+                <td></td>
+                <td>cca 10 minut autobusem přímo na hřiště</td>
+                <td>Ano</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.hotel-max.cz/cs/">Hotel Max</a></td>
+                <td></td>
+                <td>cca 10 minut autobusem přímo na hřiště</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td><a href="https://www.svornost.cz/">Hotel Svornost</a></td>
+                <td>750 - 850,- za osobu a noc</td>
+                <td>cca 5 minut vlakem přímo na hřiště</td>
+                <td>Ano, v ceně</td>
+            </tr>
+            <tr>
+                <td><a href="http://www.petra-penzion.cz/">Penzion Petra</a></td>
+                <td>700,- za osobu a noc</td>
+                <td>cca 10 minut autobusem na zastávku Běchovice</td>
+                <td>Ano</td>
+            </tr>
+            <tr>
+                <td><a href="https://penzion-rohoznik.cz/">Penzion Rohožník</a></td>
+                <td></td>
+                <td>cca 10 minut autobusem na zastávku Běchovice</td>
+                <td>Ne</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.campingsokol.cz/">Camping Sokol</a></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+    </table>
 </div>
 
 <div class="cont-heading container">
@@ -147,55 +249,110 @@
 
 <div class="container text-center">
     <div class="row me-row content-ct speaker" id="partneri">
-    <div class="col-md-4 col-sm-6 feature">
-        <a href="https://www.ultimo.cz" target="_blank">
-            <img src="https://mcr.dgcp.cz/img/ultimo_logo.png" class="partner-img">
-        </a>
+        <div class="col-md-4 col-sm-6 feature">
+            <a href="https://www.praha.eu" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/praha_logo.png" class="partner-img-lg">
+            </a>
+        </div>
+        <div class="col-md-4 col-sm-6 feature">
+            <a href="https://www.kostkastav.cz" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/kostka_logo.png" class="partner-img-lg">
+            </a>
+        </div>
+        <div class="col-md-4 col-sm-6 feature">
+            <a href="https://www.bighub.cz" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/bighub_logo.png" class="partner-img-lg">
+            </a>
+        </div>
+        <div class="col-md-4 col-sm-6 feature">
+            <a href="https://www.mvpdiscsports.com" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/mvp_logo.png" class="partner-img-lg">
+            </a>
+        </div>
+        <div class="col-md-4 col-sm-6 feature">
+            <a href="https://movitenergy.cz/" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/movit_logo.png" class="partner-img-lg">
+            </a>
+        </div>
+        <div class="col-md-4 col-sm-6 feature">
+            <a href="https://www.ultimo.cz" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/ultimo_logo.png" class="partner-img-lg">
+            </a>
+        </div>
     </div>
-    <div class="col-md-4 col-sm-6 feature">
-        <a href="https://www.mvpdiscsports.com" target="_blank">
-            <img src="https://mcr.dgcp.cz/img/mvp_logo.png" class="partner-img">
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-6 feature">
-        <a href="https://www.kostkastav.cz" target="_blank">
-            <img src="https://mcr.dgcp.cz/img/kostka_logo.png" class="partner-img">
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-6 feature">
-        <a href="https://www.tectra.cz" target="_blank">
-            <img src="https://mcr.dgcp.cz/img/tectra_logo.png" class="partner-img">
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-6 feature">
-        <a href="https://www.bighub.cz" target="_blank">
-            <img src="https://mcr.dgcp.cz/img/bighub_logo.png" class="partner-img">
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-6 feature">
-        <a href="https://www.dgcp.cz" target="_blank">
-            <img src="https://mcr.dgcp.cz/img/dgcp_logo.png" class="partner-img">
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-6 feature">
-        <a href="https://www.cadg.cz" target="_blank">
-            <img src="https://mcr.dgcp.cz/img/cadg_logo.png" class="partner-img">
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-6 feature">
-        <a href="https://www.cald.cz" target="_blank">
-            <img src="https://mcr.dgcp.cz/img/cald_logo.png" class="partner-img">
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-6 feature">
-        <a href="https://www.praha.eu" target="_blank">
-            <img src="https://mcr.dgcp.cz/img/praha_logo.png" class="partner-img">
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-6 feature">
-        <a href="https://www.praha-bechovice.cz" target="_blank">
-            <img src="https://mcr.dgcp.cz/img/bechovice_logo.png" class="partner-img">
-        </a>
-    </div>
+    <div class="row me-row content-ct speaker" id="partneri">
+        <div class="col-md-3 col-sm-4 feature">
+            <a href="https://www.tectra.cz" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/tectra_logo.png" class="partner-img">
+            </a>
+        </div>
+        <div class="col-md-3 col-sm-4 feature">
+            <a href="https://www.rockdesign.studio" target="_blank"> 
+                <img src="https://mcr.dgcp.cz/img/rockdesign_logo.png" class="partner-img">
+            </a>
+        </div>
+        <div class="col-md-3 col-sm-4 feature">
+            <a href="https://www.cald.cz" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/cald_logo.png" class="partner-img">
+            </a>
+        </div>
+        <div class="col-md-3 col-sm-4 feature">
+            <a href="https://www.dgcp.cz" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/dgcp_logo.png" class="partner-img">
+            </a>
+        </div>
+        <div class="col-md-3 col-sm-4 feature">
+            <a href="https://www.cadg.cz" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/cadg_logo.png" class="partner-img">
+            </a>
+        </div>
+        <div class="col-md-3 col-sm-4 feature">
+            <a href="https://www.dronarstvi.cz" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/dronarstvi_logo.png" class="partner-img">
+            </a>
+        </div>
+        <div class="col-md-3 col-sm-4 feature">
+            <a href="https://www.slusny.net" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/slusny_logo.png" class="partner-img">
+            </a>
+        </div>
+        <div class="col-md-3 col-sm-4 feature">
+            <a href="https://www.pivovarcvikov.cz/" target="_blank"> 
+                <img src="https://mcr.dgcp.cz/img/cvikov_logo.png" class="partner-img">
+            </a>
+        </div>
+        <div class="col-md-3 col-sm-4 feature">
+            <a href="https://www.ngss.cz" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/ngss_logo.png" class="partner-img"> 
+            </a>
+        </div>
+        <div class="col-md-3 col-sm-4 feature">
+            <a href="https://www.ozmazel.cz" target="_blank"> 
+                <img src="https://mcr.dgcp.cz/img/mazel_logo.png" class="partner-img"> 
+            </a>
+        </div>
+        <div class="col-md-3 col-sm-4 feature">
+                <img src="https://mcr.dgcp.cz/img/beberry_logo.png" class="partner-img">
+        </div>
+        <div class="col-md-3 col-sm-4 feature">
+            <a href="https://www.ddmpraha9.cz" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/ddmp9_logo.png" class="partner-img">
+            </a>
+        </div>
+        <div class="col-md-3 col-sm-4 feature">
+            <a href="https://www.grizly.cz" target="_blank"> 
+                <img src="https://mcr.dgcp.cz/img/grizly_logo.png" class="partner-img">
+            </a>
+        </div>
+        <div class="col-md-3 col-sm-4 feature">
+            <a href="https://www.ramirent.cz" target="_blank"> 
+                <img src="https://mcr.dgcp.cz/img/ramirent_logo.png" class="partner-img"> 
+            </a>
+        </div>
+        <div class="col-md-3 col-sm-4 feature">
+            <a href="https://www.praha-bechovice.cz" target="_blank">
+                <img src="https://mcr.dgcp.cz/img/bechovice_logo.png" class="partner-img">
+            </a>
+        </div>
     </div>  
 </div>
