Idiscgolf zaverecna ustanoveni

--- a/idiscgolf.html
+++ b/idiscgolf.html
@@ -356,3 +356,18 @@
         </div>
     </div>  
 </div>
+
+<div class="cont-heading container">
+    <h2 class="h-mcr">
+        Závěrečná ustanovení
+    </h2>
+</div>
+
+<div class="cont-content container">
+    <p>
+        Organizátor: Česká asociace létajícího disku, z.s., Discgolf club Praha (DGC Praha), z. s.
+    </p>
+    <p class="font-italic">
+        Odesláním registračního formuláře zároveň udělujete souhlas s pořízením a následným použitím fotografií a audio/video záznamu vaší osoby nebo vámi svěřených osob.
+    </p>
+</div>
