Update layout map with parking and driving, update schedule

--- a/index.html
+++ b/index.html
@@ -321,10 +321,10 @@
               <div role="tabpanel" class="tab-pane fade" id="day-3">
                 <ul class="list-group">
                   <li class="list-group-item">Finálové kolo turnaje</li>
-                  <li class="list-group-item">8:00 - 9:00 Výhoz kategorie MJ18</li>
-                  <li class="list-group-item">9:00 Výhoz vedoucí skupiny MJ18</li>
-                  <li class="list-group-item">9:00 - 10:00 Výhoz kategorie FPO</li>
-                  <li class="list-group-item">10:00 Výhoz vedoucí skupiny FPO</li>
+                  <li class="list-group-item">8:00 - 9:00 Výhoz kategorie FPO</li>
+                  <li class="list-group-item">9:00 Výhoz vedoucí skupiny FPO</li>
+                  <li class="list-group-item">9:00 - 10:00 Výhoz kategorie </li>
+                  <li class="list-group-item">10:00 Výhoz vedoucí skupiny </li>
                   <li class="list-group-item">10:00 - 14:30 Výhoz kategorie MPO</li>
                   <li class="list-group-item">14:30 Vyhlášení kategorií FPO a MJ18</li>
                   <li class="list-group-item">14:30 Výhoz vedoucí skupiny MPO</li>
